# kernagent

./: .env.example  .gitignore  Dockerfile  NOTICE  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml
kernagent/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm_client.py  log.py  prompts.py
kernagent/oneshot/: __init__.py  pruner.py
kernagent/snapshot/: __init__.py  extractor.py  tools.py
scripts/: install.sh  kernagent  kernagent-config  kernagent-uninstall  kernagent-update
tests/: test_agent.py  test_cli_commands.py  test_cli_zip.py  test_config.py  test_oneshot_pruner.py  test_oneshot_pruner_comprehensive.py  test_snapshot_tools.py  test_snapshot_tools_extended.py
tests/fixtures/bifrose_archive/: callgraph.jsonl  data.jsonl  data_index.json  functions.jsonl  imports_exports.json  index.json  meta.json  oneshot_summary.json  sections.json  strings.jsonl
tests/fixtures/bifrose_archive/decomp/: 10001020_FUN_10001020.c  1000126a___security_check_cookie.c  10001279__clock.c  100012be____inittime.c  100012f7__printf.c  10001393_FUN_10001393.c  100013a6___get_printf_count_output.c  100013bc_fast_error_exit.c  100013e5____tmainCRTStartup.c  10001537_entry.c  10001541____report_gsfailure.c  10001650___aulldiv.c  100016c0___allmul.c  100016f4_FUN_100016f4.c  100017cb___lock_file.c  1000180c___lock_file2.c  1000183e___unlock_file.c  1000187a___unlock_file2.c  100018a9___stbuf.c  10001945___ftbuf.c  10001979__LocaleUpdate.c  10001a00_write_char.c  10001a33_write_multi_char.c  10001a59_write_string.c  100027dd___errno.c  (+206 more)
