[project]
name = "kernagent"
version = "1.0.0"
description = "Kernel Agent is a reverse-engineering copilot built on top of Ghidra snapshots."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.7.1",
    "pyghidra>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["kernagent"]
